updated code according to Java8